fixed the scrollbar

--- a/ADMIN/css/style.css
+++ b/ADMIN/css/style.css
@@ -75,6 +75,28 @@ hr.style2 {
     width: 215px;
     float: left;
 }
+
+/* width */
+::-webkit-scrollbar-track {
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: #F5F5F5;
+	border-radius: 10px;
+}
+::-webkit-scrollbar-thumb {
+	border-radius: 10px;
+	background-image: -webkit-gradient(linear,
+									   left bottom,
+									   left top,
+									   color-stop(0.44, rgb(89, 89, 89)),
+									   color-stop(0.72, rgb(51, 51, 51)),
+									   color-stop(0.86, rgb(0, 0, 0)));
+}
+::-webkit-scrollbar{
+    width: 10px;
+	background-color: #F5F5F5;
+}
+
+
 @-moz-keyframes flash {
   0% {
     opacity: 1; }
